# ddns

./: .gitignore  Brewfile  LICENSE  README.md
.github/workflows/: app.yml  flyctl.yml  hurl.yml  resolver.yml  smart-contracts.yml
app/: Dockerfile  Makefile  README.md  fly.toml  pyproject.toml  sandbox.md
app/ddnsapi/: main.py
app/ddnsapi/routes/: home.py
app/static/css/: bootstrap.css  font-awesome.css  style.css
app/static/js/: html5.js  script.js
app/templates/: about_us.html  base.html  connect_wallet.html  index.html  manage.html  search.html
app/tests/: test_ping.py
dev/: bootstrap.sh  ddns.dev-key.pem  ddns.dev.pem
frontend/: app.py
frontend/static/css/: bootstrap.css  font-awesome.css  style.css
frontend/static/js/: script.js
frontend/templates/: base.html  connect_wallet.html  index.html  manage.html  search.html
hurl/: basic.hurl
resolver/: .dockerignore  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml  requirements.txt  server.sh
resolver/api/: main.py  test_main.py
resolver/ddnsapi/: main.py
resolver/tests/: test_ping.py
smart-contracts/: .flake8  Makefile  README.md  get_client.py  get_client_beaker.py  list_accounts.py  pyproject.toml  send_transaction-py  somedao_registry.py  test_demo.py
smart-contracts/contracts/: registry.py  test_registry.py  utils.py
smart-contracts/contracts/Registry.artifacts/: application.json  approval.teal  contract.json
smart-contracts/examples/simple/: ddns.py  decorators.py  test_ddns.py
smart-contracts/examples/simple/DDNS.artifacts/: application.json  approval.teal  contract.json
smart-contracts/registry/: registry.py
smart-contracts/tests/: conftest.py
