[tool.poetry]
name = "resolver"
version = "0.1.0"
description = ""
authors = ["Rui Chen <rui@chenrui.dev>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
httpx = {version = ">=0.18.2, <2", optional = true}
jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
py-algorand-sdk = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
flake8-tidy-imports = "^4.8.0"
black = "^23.1.0"
httpx = ">=0.18.2, <2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
