[tool.poetry]
name = "smart-contracts"
version = "0.1.0"
description = ""
authors = ["Rui Chen <rui@chenrui.dev>"]
readme = "README.md"
packages = [{include = "smart_contracts"}]

[tool.poetry.dependencies]
python = "^3.11"
beaker-pyteal = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
